fix(Bitcoin Cash): shapeshift label alignment

--- a/assets/css/modules/_transaction-list.scss
+++ b/assets/css/modules/_transaction-list.scss
@@ -10,6 +10,7 @@
     @extend .btn-xs;
     font-weight: normal;
     display: inline-block;
+    margin-left: 0px;
   }
   .transaction-feed {
     position: relative;
